--- a/oneflow/core/static/sass/detail-admin/elements.scss
+++ b/oneflow/core/static/sass/detail-admin/elements.scss
@@ -400,7 +400,7 @@
    	select {
 		line-height: inherit;
 		width: 135%;
-		font-family: "Open Sans", Arial;
+		font-family: "Source Sans Pro", "Open Sans", Arial;
 		font-size: 12px;
 		border: none;
 		padding: 1px 30px 0px 7px;
